Very big reorganization

--- a/extractor/.gitignore
+++ b/extractor/.gitignore
@@ -3,3 +3,8 @@ data/test/
 data/US/main.dol
 data/US/aaaa.dat
 data/US/ZZZZ.dat
+data/Family/main.dol
+data/Family/aaaa.dat
+data/Family/ZZZZ.dat
+organized_maybe/
+other/
